syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
    // Your data here (2A, 2B).
    uint64 term             = 1;
    uint64 candidate_id    = 2;
    uint64 last_log_index   = 3;
    uint64 last_log_term    = 4;

}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
    // Your data here (2A).
    uint64 term         = 1;
    bool vote_granted   = 2;
}

message AppendEntriesArgs {
    uint64 term             = 1;
    uint64 leader_id        = 2;
    uint64 prev_log_index   = 3;
    uint64 prev_log_term    = 4;
    repeated LogEntry entries  = 5;
    uint64 leader_commit    = 6;
}

message LogEntry {
    uint64 index = 1;
    uint64 term = 2;
    bytes command = 3;
}

message AppendEntriesReply{
    uint64 term             = 1;
    bool success            = 2;
    uint64 conflict_index   = 3;
    uint64 conflict_term    = 4;
}

message PersistentState {
    uint64 current_term         = 1;
    uint64 voted_for            = 2;
    repeated LogEntry entries   = 3;
}

message InstallSnapshotArgs {
    uint64 term                 = 1;
    uint64 leader_id            = 2;
    uint64 last_included_index  = 3;
    uint64 last_included_term   = 4;
    // uint64 offset               = 5;
    bytes data                  = 5;
    // bool done                   = 6;
}

message InstallSnapshotReply {
    uint64 term = 1;
}